--- a/documentation/Guide-to-the-Reader.asciidoc
+++ b/documentation/Guide-to-the-Reader.asciidoc
@@ -7,6 +7,6 @@ Dependent on the intention you are reading this document, you might be most inte
 * As a **user of the CobiGen Eclipse integration**, you should focus on the link:cobigen-eclipse_installation[Installation] and link:cobigen-eclipse_usage[Usage] chapters to get a good introduction how to use CobiGen in eclipse.
 * As a **user of the Maven integration**, you should focus on the link:cobigen-maven_configuration[Maven configuration] chapter, which guides you through the integration if CobiGen into your build configuration.
 
-* If you like to *adapt the configuration of CobiGen*, you have to step more deeper into the link:cobigen-core_configuration[configuration guide] as well as into the plug-in configuration extensions for the link:cobigen-javaplugin[Java Plug-in], link:cobigen-xmlplugin[XML-Plugin], link:cobigen-propertyplugin[Java Property Plug-in], as well as for the link:cobigen-textmerger[Text-Merger Plug-in].
+* If you like to *adapt the configuration of CobiGen*, you have to step deeper into the link:cobigen-core_configuration[configuration guide] as well as into the plug-in configuration extensions for the link:cobigen-javaplugin[Java Plug-in], link:cobigen-xmlplugin[XML-Plugin], link:cobigen-propertyplugin[Java Property Plug-in], as well as for the link:cobigen-textmerger[Text-Merger Plug-in].
 
 * Finally, if want to *develop your own templates*, you will be thankful for link:cobigen-templates_helpful-links[helpful links] in addition to the plug-ins documentation as referenced in the previous point.
