--- a/documentation/howto_ionic-client-generation.asciidoc
+++ b/documentation/howto_ionic-client-generation.asciidoc
@@ -74,7 +74,7 @@ This happens because the merger of CobiGen prefers to duplicate rather than to d
 
 * Run ```ionic serve`` on your console.
 
-After following all these steps, your application should start. However, remember that you will need your **server** to be running for acessing to the list page.
+After following all these steps your application should start. However, remember that you will need your **server** to be running for access to the list page.
 
 == Running it on Android
 
