--- a/README.asciidoc
+++ b/README.asciidoc
@@ -68,7 +68,7 @@ The CobiGen repository is organized in a one-branch-per-plugin schema. By that, 
 
 You can build CobiGen core as well as each plug-in besides the eclipse plug-in separately by stepping into the plug-in folder, e.g. for the Java plug-in you could step into `cobigen/cobigen-javaplugin` and run `mvn clean install` to build the plug-in and deploy it into your local repository.
 
-The CobiGen eclipse plug-in can build build by running `mvn clean package -Pp2-build-mars`. The profile `p2-build-mars` builds the eclipse plug-in by retrieving eclipse mars bundles as dependencies. Without specifying the profile, the build will fail. An exception to this is the cobigen-eclipse-test project, which has to be built using `mvn clean package -Pp2-build-mars,p2-build-stable,p2-build-experimental`.
+The CobiGen eclipse plug-in can build build by running `mvn clean package -Pp2-build-photon`. The profile `p2-build-photon` builds the eclipse plug-in by retrieving eclipse photon bundles as dependencies. Without specifying the profile, the build will fail. An exception to this is the cobigen-eclipse-test project, which has to be built using `mvn clean package -Pp2-build-photon,p2-build-stable,p2-build-experimental`.
 
 == Deploy
 
@@ -83,12 +83,12 @@ CobiGen deployment has to be distinguished threefold
 |  `cobigen/cobigen-*/` (except core). In case of deploying dev_javaplugin or dev_openapiplugin, go to `cobigen/cobigen-*-parent/cobigen-*`| ECLIPSE | ```# Builds the Manifest and bundles the dependencies
 mvn clean package bundle:bundle -Pp2-bundle
 # Uses the created bundle and builds a p2 update site for it. Do NOT use clean
-mvn install bundle:bundle -Pp2-bundle,p2-build-mars,p2-build-experimental p2:site
+mvn install bundle:bundle -Pp2-bundle,p2-build-photon,p2-build-experimental p2:site
 # Uploades the p2 update site to the experimental repository. Do NOT use clean
-mvn deploy -Pp2-build-mars,p2-build-experimental -Dp2.upload=experimental
+mvn deploy -Pp2-build-photon,p2-build-experimental -Dp2.upload=experimental
 ```
 
-| `cobigen-eclipse/` | ECLIPSE | `mvn clean deploy -Pp2-build-mars,p2-build-experimental -Dp2.upload=experimental`
+| `cobigen-eclipse/` | ECLIPSE | `mvn clean deploy -Pp2-build-photon,p2-build-experimental -Dp2.upload=experimental`
 |===
 
 == Debugging with Maven
