--- a/documentation/master-cobigen.asciidoc
+++ b/documentation/master-cobigen.asciidoc
@@ -65,6 +65,10 @@ include::cobigen-tsplugin[leveloffset=3]
 
 include::cobigen-htmlplugin[leveloffset=3]
 
+== CobiGen CLI
+
+include::howto_Cobigen-CLI-generation[leveloffset=2]
+
 == Maven Build Integration
 
 include::cobigen-maven_configuration[leveloffset=2]
@@ -76,6 +80,22 @@ include::cobigen-eclipse_installation[leveloffset=2]
 include::cobigen-eclipse_usage[leveloffset=2]
 
 include::cobigen-eclipse_logging[leveloffset=2]
+
+== How to
+
+include::howto_angular-client-generation[leveloffset=2]
+
+include::howto_ionic-client-generation[leveloffset=2]
+
+include::howto_create-a-new-plugin[leveloffset=2]
+
+include::howto_create-external-plugin[leveloffset=2]
+
+include::howto_devon4net[leveloffset=2]
+
+include::howto_update_CobiGen[leveloffset=2]
+
+include::howto_Release-creation[leveloffset=2]
 
 == Template Development
 
