--- a/documentation/howto_Cobigen-CLI-generation.asciidoc
+++ b/documentation/howto_Cobigen-CLI-generation.asciidoc
@@ -7,7 +7,7 @@ Our new command line interface (CLI) for CobiGen enables the generation of code 
 
 == Install CobiGen CLI
 
-In order to install the CobiGen CLI you will need to use the https://github.com/devonfw/devon-ide[devonfw/ide]. In a console run `devon cobigen`.
+In order to install the CobiGen CLI you will need to use the https://github.com/devonfw/ide[devonfw/ide]. In a console run `devon cobigen`.
 
 == Commands and options
 Using the following command and option you will be able to customize your generation as follows:
