--- a/README.asciidoc
+++ b/README.asciidoc
@@ -6,6 +6,7 @@ image:https://travis-ci.com/devonfw/cobigen.svg?branch=master["Docs Sync Status"
 
 |===
 | Component | Release | Build
+| eclipse-plugin | no maven release | image:https://travis-ci.com/devonfw/cobigen.svg?branch=dev_eclipseplugin["Build Status", link="https://travis-ci.com/devonfw/cobigen"] 
 | maven-plugin | image:https://maven-badges.herokuapp.com/maven-central/com.devonfw.cobigen/maven-plugin/badge.svg[https://maven-badges.herokuapp.com/maven-central/com.devonfw.cobigen/maven-plugin] | image:https://travis-ci.com/devonfw/cobigen.svg?branch=dev_mavenplugin["Build Status", link="https://travis-ci.com/devonfw/cobigen"] 
 | templates-devon4j | image:https://maven-badges.herokuapp.com/maven-central/com.devonfw.cobigen/templates-oasp4j/badge.svg[https://maven-badges.herokuapp.com/maven-central/com.devonfw.cobigen/templates-oasp4j] | image:https://travis-ci.com/devonfw/cobigen.svg?branch=master["Build Status", link="https://travis-ci.com/devonfw/cobigen"]
 | templates-devon4ng | image:https://maven-badges.herokuapp.com/maven-central/com.devonfw.cobigen/templates-oasp4js/badge.svg[https://maven-badges.herokuapp.com/maven-central/com.devonfw.cobigen/templates-oasp4js] | image:https://travis-ci.com/devonfw/cobigen.svg?branch=master["Build Status", link="https://travis-ci.com/devonfw/cobigen"]
