--- a/documentation/master-cobigen.asciidoc
+++ b/documentation/master-cobigen.asciidoc
@@ -97,6 +97,8 @@ include::howto_update_CobiGen[leveloffset=2]
 
 include::howto_Release-creation[leveloffset=2]
 
+include::howto_enable_composite_primary_keys_in_entity[leveloffset=2]
+
 == Template Development
 
 include::cobigen-templates_helpful-links[leveloffset=2]
