--- a/documentation/master-cobigen.asciidoc
+++ b/documentation/master-cobigen.asciidoc
@@ -97,9 +97,9 @@ include::howto_update_CobiGen[leveloffset=2]
 
 include::howto_Release-creation[leveloffset=2]
 
-include::howto-devonfw-CobiGen-OpenAPI[leveloffset=2]
+include::howto-devonfw-CobiGen-OpenAPI.adoc[leveloffset=2]
 
-include::howto-devonfw-ide-CobiGen-PoC-E2E[leveloffset=2]
+include::howto-devonfw-ide-CobiGen-PoC-E2E.adoc[leveloffset=2]
 
 == Template Development
 
